added features section and icons

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,10 @@ body {
 
 .features {
   background-color: #aaa;
-  grid-column: center-start / center-end; }
+  grid-column: center-start / center-end;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 6rem; }
 
 .story__pictures {
   background-color: #c69963;
