--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,8 +7,8 @@
     background-position: center;
 
     display: grid;
-    grid-template-rows: 1fr min-content 6rem 1fr;
-    grid-template-columns: max-content;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: minmax(min-content, max-content);
     grid-row-gap: 1.5rem;
 
     padding: 8rem;
